// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tab render correctly active false 1`] = `
<View
  accessibilityLabel="tab"
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "#D1D4DB",
      "borderRadius": 12,
      "marginRight": 12,
      "opacity": 1,
      "paddingHorizontal": 18,
      "paddingVertical": 9,
    }
  }
>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#5E6678",
          "fontFamily": "Inter-Regular",
          "fontSize": 21,
          "lineHeight": 27,
        },
        undefined,
      ]
    }
  >
    1
  </Text>
</View>
`;

exports[`Tab render correctly active true 1`] = `
<View
  accessibilityLabel="tab"
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "#2B78EE",
      "borderRadius": 12,
      "marginRight": 12,
      "opacity": 1,
      "paddingHorizontal": 18,
      "paddingVertical": 9,
    }
  }
>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#FFF",
          "fontFamily": "Inter-Regular",
          "fontSize": 21,
          "lineHeight": 27,
        },
        undefined,
      ]
    }
  >
    1
  </Text>
</View>
`;

exports[`Tab render correctly with props 1`] = `
<View
  accessibilityLabel="tab"
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "#2B78EE",
      "borderRadius": 12,
      "marginRight": 12,
      "opacity": 1,
      "paddingHorizontal": 18,
      "paddingVertical": 9,
    }
  }
>
  <View />
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#FFF",
          "fontFamily": "Inter-Regular",
          "fontSize": 21,
          "lineHeight": 27,
        },
        undefined,
      ]
    }
  >
    1
  </Text>
  <View />
</View>
`;
